# capstone

./: .gitignore  404.html  README.md  Schedule.md  getting-started.md  inbox.md  index.html  mkdocs.yml  pyproject.toml  readme.md  syllabus.md  testests.md  tset.py
.github/: flake8.yml
.github/workflows/: build_mkdocs_website.yml
.obsidian/: core-plugins-migration.json  workspace.json
Writerside2/: 2nc.tree  writerside.cfg
Writerside2/cfg/: buildprofiles.xml
__main/: _index.md
__main/document/: syllabus.md
capstone-nuxt-site/: package-lock.json
code/: convert_docx_to_md.py
course_materials/2024-capstone-intake-survey/: index.html
course_materials/classbot.v3.server-prompt/: index.html
daily_notes/: 2024-01-13.md  Debugging GCP Logs.md
docs/: 2024-capstone-intake-survey.md  index.html  index.md  test1.md
docs/chats/: Debugging GCP Logs.md
docs/code/: convert_docx_to_md.py
docs/course_materials/: capstone-project-description.md  classbot.v3.server-prompt.md  presentation-servers.md
docs/scratch-not-implemented/: presentation-servers.md
docs/woo/: woo2.md  woo3.md
main/document/: _index.md  syllabus.md
main/notes/: scratch.md  (+1 more)
notes/: Matthis-BIOL4701-Biology-Capstone-online-Spring-2024-Syllabus.md  assignment-1-introductions.md  assignment.1.introductions.channel.prompt copy.md  assignment.1.introductions.channel.prompt.md  assignment.1.introductions.discord-post.md  classbot.v3.server-prompt.md  convert_docx_to_md  syllabus.md
nuxt-content-app/: pnpm-lock.yaml
search/: search_index.json
vscode_foam_docs/: getting-started.md
(+182 files in other folders)
