[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "Jon Matthis' instance of the `capstone` repo"
authors = ["jonmatthis <jonmatthis@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
